Design fixes blog list items Bugfix recipe and blog pagination

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2138,6 +2138,30 @@ h3.aside-title {
   z-index:100;
 }
 
+// Blog
+.blog-item h2 {
+  color:@hdc-green;
+  margin-top:0px;
+  font-size:25px;
+}
+.blog-item .dates {
+  font-size:11px;
+  color:@hdc-dark-gray;
+  margin-bottom:10px;
+}
+.blog-item img {
+  border:1px solid @hdc-dark-gray;
+}
+.blog-item a:hover {
+  text-decoration:none;
+}
+.blog-item a:hover h2 {
+  color:@hdc-dark-green;
+}
+.blog-item .bread {
+  margin-top:20px;
+}
+
 // Login
 .login-form
 {
