- Renamed "blogg" to "blog" - Fixed "Abort"-button on blog - Fixed "Delete"-button/function on blog

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2140,6 +2140,7 @@ h3.aside-title {
 
 // Blog
 .blog-item h2 {
+  display: inline-block;
   color:@hdc-green;
   margin-top:0px;
   font-size:25px;
