--- a/app/views/blog/view.scala.html
+++ b/app/views/blog/view.scala.html
@@ -35,7 +35,7 @@
                     </div>
                     @if(isThisMyBlogPost){
                         <div class="col-xs-12 big-margin-top">
-                            <a href="@controllers.routes.BloggPostsPageController.edit(blogPost.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("blog.button.edit")</a><br>
+                            <a href="@controllers.routes.BlogPostsPageController.edit(blogPost.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("blog.button.edit")</a><br>
                         </div>
                     }
                 </div>
