--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -146,7 +146,7 @@
                         </section>
                         <h3 class="text-center">@Messages("startpage.wizard.host.or.guest")</h3>
                         <section>
-                            <div id="host-wizard" class="big-margin-top">
+                            <div id="host-wizard">
                                 <ul class="hidden">
                                     <li><a href="#wizhtabsel" data-toggle="tab">@Messages("startpage.wizard.tab.select.header")</a></li>
                                     <li><a href="#wizhtab1" data-toggle="tab">@Messages("startpage.wizard.tab.step1.header")</a></li>
