- Corrected text for wizard - Added close button for wizard

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1601,9 +1601,19 @@ h3.aside-title {
 .startpage-wizards-buttons .host-wizard .select-step:hover {
   background-color: rgba(@hdc-orange-r, @hdc-orange-g, @hdc-orange-b, 1.0);
 }
-.startpage-wizards .tab-pane img {
+.startpage-wizards .wiz-modal-header {
+  padding:10px 10px 25px 0px;
+  background-color:#fff;
+  min-height:37px;
   border-radius:6px 6px 0px 0px;
 }
+.startpage-wizards .wiz-modal-header button.close {
+  margin-top:-7px;
+}
+.startpage-wizards .wiz-modal-header button.close span {
+  font-size:30px;
+}
+
 .startpage-wizards .tab-pane .overlay {
   position: relative;
   padding:15px 20px 10px 20px;
