--- a/app/views/startpage/wizardModals.scala.html
+++ b/app/views/startpage/wizardModals.scala.html
@@ -2,6 +2,7 @@
 
     <div class="modal fade" id="guest-wizard-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
+            <div class="modal-header wiz-modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
             <div class="modal-content">
                 <section>
                     <div id="guest-wizard">
@@ -53,6 +54,7 @@
 
     <div class="modal fade" id="host-wizard-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
+            <div class="modal-header wiz-modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
             <div class="modal-content">
                 <section>
                     <div id="host-wizard">
